--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "framer-motion": "^6.3.11",
     "magic-sdk": "^8.1.1",
     "next": "12.1.6",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.43",
