--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.9.3",
     "@magic-sdk/admin": "^1.4.1",
     "@supabase/supabase-js": "^1.35.3",
+    "cookies-next": "^2.0.4",
     "framer-motion": "^6.3.11",
     "magic-sdk": "^8.1.1",
     "next": "12.1.6",
